# amcp

./: .gitignore  CMakeLists.txt  README.md
include/: amcp.h
msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  amcp.sln  amcp.vcxproj  amcp.vcxproj.filters  cmake_install.cmake  test.vcxproj  test.vcxproj.filters
msvc/Release/: amcp.lib
msvc/amcp.dir/Release/amcp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  amcp.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
python/: .gitignore
python/amcp/: __init__.py  amcp.py  amcp_func.py  amcp_func2.py  amcp_func_idx.py  amcp_type.py
src/: amcp.c
test/: test.c  test.py  test_gen.h
